feat: get vtubers params
